[package]
name = "ipgeo"
version = "0.1.1"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "A CLI tool that finds the location of IP addresses."
repository = "https://github.com/DefunctLizard/ipgeocli/"
documentation = "https://docs.rs/ipgeo"
keywords = ["geolocation", "ip", "locator", "geolocate", "cli"]
categories = ["network-programming", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipgeolocate = "0.3.0"
clap = "2.33.3"
ureq = "1.5.1"
dns-lookup = "1.0.5"
