[package]
name = "ipgeo"
version = "0.1.8"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "A CLI tool that finds the location and other information of IP addresses or DNS addresses."
repository = "https://github.com/DefunctLizard/ipgeocli/"
keywords = ["geolocation", "ip", "locator", "geolocate", "cli"]
categories = ["network-programming", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipgeolocate = "0.3.5"
clap = "2.33.3"
surf = "2.2.0"
dns-lookup = "1.0.5"
colored = "2"
async-std = { version = "1.9.0", features = ["attributes"] }